# sherlock-rs

./: Cargo.toml  LICENSE  README.md  UPSTREAM-DEVIATIONS.md
.github/workflows/: ci.yml
resources/: data.json
src/: detect.rs  engine.rs  lib.rs  main.rs  result.rs  site.rs
tests/: manifest.rs
