[package]
name = "sherlock-rs"
version = "0.1.0"
edition = "2021"
description = "Hunt down social media accounts by username across social networks — a fast, single-binary Rust port of sherlock."
license = "MIT"
repository = "https://github.com/hydrogen2/sherlock-rs"

[[bin]]
name = "sherlock-rs"
path = "src/main.rs"

[lib]
name = "sherlock_rs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls avoids a system OpenSSL dependency, keeping the binary self-contained.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
# fancy-regex (not the `regex` crate) because site `regexCheck` patterns use PCRE
# look-around, which `regex` omits by design. See src/detect.rs.
fancy-regex = "0.13"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
jsonschema = "0.18"
